# Django-Models

./: README.md  pyproject.toml
snack_tracker_project/: db.sqlite3
snack_tracker_project/snack/: models.py
snack_tracker_project/snack/migrations/: 0001_initial.py
snack_tracker_project/snack_tracker_project/: settings.py
