[tool.poetry]
name = "djangoModels"
version = "0.1.0"
description = ""
authors = ["BoshraJaber <boshrajaber94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
